syntax = "proto3";


package SystemEventMailingService;


import "google/protobuf/empty.proto";



message ActivationInfo {
	required string  firstName     = 1;
	required string  lastName      = 2;
	required string  email         = 3;
	required string  token         = 4;
}

service SystemEventMailingService {
  rpc ping (Empty) returns (Empty) {}
  rpc sendActivationEmail (ActivationInfo) returns (Empty) {}
}
